<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.megan.admincomm.AddEContact">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contactInst"
        android:textSize="16sp"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/contactChoice">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emergency"
            android:text="@string/emerg"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/medical"
            android:text="@string/med"
            android:layout_marginTop="5dp"
            android:textSize="15sp"/>
    </RadioGroup>


    <!-- Divider -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/divider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/number"
        android:hint="@string/number"
        android:inputType="phone"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ext"
        android:hint="@string/extNo"
        android:inputType="number"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:layout_marginBottom="5dp"
        android:id="@+id/submit"/>
</LinearLayout>
