<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.megan.admincomm.AddUser">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uwiID"
                android:inputType="number"
                android:hint="@string/uwiID"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fname"
                android:hint="@string/fname"
                android:inputType="text"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lname"
                android:hint="@string/lname"
                android:inputType="text"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dobLayout"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                >
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dob"
                    android:inputType="date"
                    android:hint="@string/dob"
                    android:singleLine="true"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/calendarBtn"
                    android:text="@string/calBtn"
                    style="?android:attr/buttonStyleSmall"
                    android:textSize="13sp"
                    android:padding="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:typeface="serif"/>
            </LinearLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/gender"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/male"
                    android:text="@string/male"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/female"
                    android:text="@string/female"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp" />
            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faculty"
                android:hint="@string/faculty"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dept"
                android:hint="@string/dept"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addBtn"
                android:text="@string/addBtn"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                />



        </LinearLayout>
    </ScrollView>


</LinearLayout>